// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`home tests renders 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Index
    loggedIn={false}
    posts={
      Array [
        Object {
          "node": Object {
            "author": Object {
              "description": null,
              "fullName": "Marvin Kome",
              "gravatarUrl": null,
              "id": "VXNlcjoy",
            },
            "body": "<div><p>Hey there im new</p>
</div>",
            "claps": Object {
              "totalCount": 0,
            },
            "comments": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "author": Object {
                      "fullName": "Fake User",
                      "gravatarUrl": null,
                      "id": "VXNlcjox",
                    },
                    "body": "Hello World",
                    "id": "Q29tbWVudDox",
                    "replies": Object {
                      "edges": Array [],
                    },
                    "timestamp": "2018-06-05T01:30:59.729280",
                    "uuid": "1",
                  },
                },
                Object {
                  "node": Object {
                    "author": Object {
                      "fullName": "Fake User",
                      "gravatarUrl": null,
                      "id": "VXNlcjox",
                    },
                    "body": "Notify Marvin Correctly",
                    "id": "Q29tbWVudDoy",
                    "replies": Object {
                      "edges": Array [],
                    },
                    "timestamp": "2018-06-05T02:09:39.718090",
                    "uuid": "2",
                  },
                },
                Object {
                  "node": Object {
                    "author": Object {
                      "fullName": "Fake User",
                      "gravatarUrl": null,
                      "id": "VXNlcjox",
                    },
                    "body": "Hello Marvin",
                    "id": "Q29tbWVudDoz",
                    "replies": Object {
                      "edges": Array [],
                    },
                    "timestamp": "2018-06-05T11:58:49.746609",
                    "uuid": "3",
                  },
                },
                Object {
                  "node": Object {
                    "author": Object {
                      "fullName": "Fake User",
                      "gravatarUrl": null,
                      "id": "VXNlcjox",
                    },
                    "body": "Hello Marvin",
                    "id": "Q29tbWVudDo0",
                    "replies": Object {
                      "edges": Array [],
                    },
                    "timestamp": "2018-06-09T01:46:10.115571",
                    "uuid": "4",
                  },
                },
              ],
            },
            "id": "UG9zdDox",
            "postPicUrl": "",
            "tags": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "id": "VGFnczox",
                    "name": "hello",
                  },
                },
              ],
            },
            "timestamp": "2018-06-05T01:28:35.802157",
            "title": "Hello World",
            "uuid": "1",
            "views": 16,
          },
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "loggedIn": false,
      "render": [Function],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "loggedIn": false,
        "render": [Function],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`home tests renders post card 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PostCard
    post={
      Object {
        "author": Object {
          "description": null,
          "fullName": "Marvin Kome",
          "gravatarUrl": null,
          "id": "VXNlcjoy",
        },
        "body": "<div><p>Hey there im new</p>
</div>",
        "claps": Object {
          "totalCount": 0,
        },
        "comments": Object {
          "edges": Array [
            Object {
              "node": Object {
                "author": Object {
                  "fullName": "Fake User",
                  "gravatarUrl": null,
                  "id": "VXNlcjox",
                },
                "body": "Hello World",
                "id": "Q29tbWVudDox",
                "replies": Object {
                  "edges": Array [],
                },
                "timestamp": "2018-06-05T01:30:59.729280",
                "uuid": "1",
              },
            },
            Object {
              "node": Object {
                "author": Object {
                  "fullName": "Fake User",
                  "gravatarUrl": null,
                  "id": "VXNlcjox",
                },
                "body": "Notify Marvin Correctly",
                "id": "Q29tbWVudDoy",
                "replies": Object {
                  "edges": Array [],
                },
                "timestamp": "2018-06-05T02:09:39.718090",
                "uuid": "2",
              },
            },
            Object {
              "node": Object {
                "author": Object {
                  "fullName": "Fake User",
                  "gravatarUrl": null,
                  "id": "VXNlcjox",
                },
                "body": "Hello Marvin",
                "id": "Q29tbWVudDoz",
                "replies": Object {
                  "edges": Array [],
                },
                "timestamp": "2018-06-05T11:58:49.746609",
                "uuid": "3",
              },
            },
            Object {
              "node": Object {
                "author": Object {
                  "fullName": "Fake User",
                  "gravatarUrl": null,
                  "id": "VXNlcjox",
                },
                "body": "Hello Marvin",
                "id": "Q29tbWVudDo0",
                "replies": Object {
                  "edges": Array [],
                },
                "timestamp": "2018-06-09T01:46:10.115571",
                "uuid": "4",
              },
            },
          ],
        },
        "id": "UG9zdDox",
        "postPicUrl": "",
        "tags": Object {
          "edges": Array [
            Object {
              "node": Object {
                "id": "VGFnczox",
                "name": "hello",
              },
            },
          ],
        },
        "timestamp": "2018-06-05T01:28:35.802157",
        "title": "Hello World",
        "uuid": "1",
        "views": 16,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="post-card card horizontal"
      >
        <div
          className="card-stacked"
        >
          <div
            className="card-content"
          >
            <h1
              className="post-card__title"
            >
              <Link
                as="/p/hello-world-UG9zdDox"
                href="/post?id=hello-world-UG9zdDox"
              >
                <a
                  className="post-card__title--link"
                >
                  Hello World
                </a>
              </Link>
            </h1>
            <p
              className="post-card__text"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<div><p>Hey there im new</p>
</div>",
                }
              }
            />
          </div>
          <div
            className="post-card__meta card-action"
          >
            <div
              className="post-card__meta__author"
            >
              <div
                className="post-card__meta__author-image"
              >
                <img
                  className="circle"
                  src="/static/default-pic.png"
                  style={Object {}}
                />
              </div>
              <div
                className="post-card__meta__info"
              >
                <Link
                  href="/profile/marvin_kome_VXNlcjoy"
                >
                  <a
                    title="Marvin Kome"
                  >
                    <span
                      className="post-card__meta__name"
                    >
                      Marvin Kome
                    </span>
                  </a>
                </Link>
                <span
                  className="post-card__meta__date"
                >
                  23 days ago
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          false,
          <div
            className="card-stacked"
          >
            <div
              className="card-content"
            >
              <h1
                className="post-card__title"
              >
                <Link
                  as="/p/hello-world-UG9zdDox"
                  href="/post?id=hello-world-UG9zdDox"
                >
                  <a
                    className="post-card__title--link"
                  >
                    Hello World
                  </a>
                </Link>
              </h1>
              <p
                className="post-card__text"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<div><p>Hey there im new</p>
</div>",
                  }
                }
              />
            </div>
            <div
              className="post-card__meta card-action"
            >
              <div
                className="post-card__meta__author"
              >
                <div
                  className="post-card__meta__author-image"
                >
                  <img
                    className="circle"
                    src="/static/default-pic.png"
                    style={Object {}}
                  />
                </div>
                <div
                  className="post-card__meta__info"
                >
                  <Link
                    href="/profile/marvin_kome_VXNlcjoy"
                  >
                    <a
                      title="Marvin Kome"
                    >
                      <span
                        className="post-card__meta__name"
                      >
                        Marvin Kome
                      </span>
                    </a>
                  </Link>
                  <span
                    className="post-card__meta__date"
                  >
                    23 days ago
                  </span>
                </div>
              </div>
            </div>
          </div>,
        ],
        "className": "post-card card horizontal",
      },
      "ref": null,
      "rendered": Array [
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="card-content"
              >
                <h1
                  className="post-card__title"
                >
                  <Link
                    as="/p/hello-world-UG9zdDox"
                    href="/post?id=hello-world-UG9zdDox"
                  >
                    <a
                      className="post-card__title--link"
                    >
                      Hello World
                    </a>
                  </Link>
                </h1>
                <p
                  className="post-card__text"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<div><p>Hey there im new</p>
</div>",
                    }
                  }
                />
              </div>,
              <div
                className="post-card__meta card-action"
              >
                <div
                  className="post-card__meta__author"
                >
                  <div
                    className="post-card__meta__author-image"
                  >
                    <img
                      className="circle"
                      src="/static/default-pic.png"
                      style={Object {}}
                    />
                  </div>
                  <div
                    className="post-card__meta__info"
                  >
                    <Link
                      href="/profile/marvin_kome_VXNlcjoy"
                    >
                      <a
                        title="Marvin Kome"
                      >
                        <span
                          className="post-card__meta__name"
                        >
                          Marvin Kome
                        </span>
                      </a>
                    </Link>
                    <span
                      className="post-card__meta__date"
                    >
                      23 days ago
                    </span>
                  </div>
                </div>
              </div>,
            ],
            "className": "card-stacked",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h1
                    className="post-card__title"
                  >
                    <Link
                      as="/p/hello-world-UG9zdDox"
                      href="/post?id=hello-world-UG9zdDox"
                    >
                      <a
                        className="post-card__title--link"
                      >
                        Hello World
                      </a>
                    </Link>
                  </h1>,
                  <p
                    className="post-card__text"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "<div><p>Hey there im new</p>
</div>",
                      }
                    }
                  />,
                ],
                "className": "card-content",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <Link
                      as="/p/hello-world-UG9zdDox"
                      href="/post?id=hello-world-UG9zdDox"
                    >
                      <a
                        className="post-card__title--link"
                      >
                        Hello World
                      </a>
                    </Link>,
                    "className": "post-card__title",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "as": "/p/hello-world-UG9zdDox",
                      "children": <a
                        className="post-card__title--link"
                      >
                        Hello World
                      </a>,
                      "href": "/post?id=hello-world-UG9zdDox",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Hello World",
                        "className": "post-card__title--link",
                      },
                      "ref": null,
                      "rendered": "Hello World",
                      "type": "a",
                    },
                    "type": [Function],
                  },
                  "type": "h1",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "post-card__text",
                    "dangerouslySetInnerHTML": Object {
                      "__html": "<div><p>Hey there im new</p>
</div>",
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "p",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="post-card__meta__author"
                >
                  <div
                    className="post-card__meta__author-image"
                  >
                    <img
                      className="circle"
                      src="/static/default-pic.png"
                      style={Object {}}
                    />
                  </div>
                  <div
                    className="post-card__meta__info"
                  >
                    <Link
                      href="/profile/marvin_kome_VXNlcjoy"
                    >
                      <a
                        title="Marvin Kome"
                      >
                        <span
                          className="post-card__meta__name"
                        >
                          Marvin Kome
                        </span>
                      </a>
                    </Link>
                    <span
                      className="post-card__meta__date"
                    >
                      23 days ago
                    </span>
                  </div>
                </div>,
                "className": "post-card__meta card-action",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <div
                      className="post-card__meta__author-image"
                    >
                      <img
                        className="circle"
                        src="/static/default-pic.png"
                        style={Object {}}
                      />
                    </div>,
                    <div
                      className="post-card__meta__info"
                    >
                      <Link
                        href="/profile/marvin_kome_VXNlcjoy"
                      >
                        <a
                          title="Marvin Kome"
                        >
                          <span
                            className="post-card__meta__name"
                          >
                            Marvin Kome
                          </span>
                        </a>
                      </Link>
                      <span
                        className="post-card__meta__date"
                      >
                        23 days ago
                      </span>
                    </div>,
                  ],
                  "className": "post-card__meta__author",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <img
                        className="circle"
                        src="/static/default-pic.png"
                        style={Object {}}
                      />,
                      "className": "post-card__meta__author-image",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "circle",
                        "src": "/static/default-pic.png",
                        "style": Object {},
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "img",
                    },
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <Link
                          href="/profile/marvin_kome_VXNlcjoy"
                        >
                          <a
                            title="Marvin Kome"
                          >
                            <span
                              className="post-card__meta__name"
                            >
                              Marvin Kome
                            </span>
                          </a>
                        </Link>,
                        <span
                          className="post-card__meta__date"
                        >
                          23 days ago
                        </span>,
                      ],
                      "className": "post-card__meta__info",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "children": <a
                            title="Marvin Kome"
                          >
                            <span
                              className="post-card__meta__name"
                            >
                              Marvin Kome
                            </span>
                          </a>,
                          "href": "/profile/marvin_kome_VXNlcjoy",
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": <span
                              className="post-card__meta__name"
                            >
                              Marvin Kome
                            </span>,
                            "title": "Marvin Kome",
                          },
                          "ref": null,
                          "rendered": Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "Marvin Kome",
                              "className": "post-card__meta__name",
                            },
                            "ref": null,
                            "rendered": "Marvin Kome",
                            "type": "span",
                          },
                          "type": "a",
                        },
                        "type": [Function],
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "23 days ago",
                          "className": "post-card__meta__date",
                        },
                        "ref": null,
                        "rendered": "23 days ago",
                        "type": "span",
                      },
                    ],
                    "type": "div",
                  },
                ],
                "type": "div",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="post-card card horizontal"
        >
          <div
            className="card-stacked"
          >
            <div
              className="card-content"
            >
              <h1
                className="post-card__title"
              >
                <Link
                  as="/p/hello-world-UG9zdDox"
                  href="/post?id=hello-world-UG9zdDox"
                >
                  <a
                    className="post-card__title--link"
                  >
                    Hello World
                  </a>
                </Link>
              </h1>
              <p
                className="post-card__text"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<div><p>Hey there im new</p>
</div>",
                  }
                }
              />
            </div>
            <div
              className="post-card__meta card-action"
            >
              <div
                className="post-card__meta__author"
              >
                <div
                  className="post-card__meta__author-image"
                >
                  <img
                    className="circle"
                    src="/static/default-pic.png"
                    style={Object {}}
                  />
                </div>
                <div
                  className="post-card__meta__info"
                >
                  <Link
                    href="/profile/marvin_kome_VXNlcjoy"
                  >
                    <a
                      title="Marvin Kome"
                    >
                      <span
                        className="post-card__meta__name"
                      >
                        Marvin Kome
                      </span>
                    </a>
                  </Link>
                  <span
                    className="post-card__meta__date"
                  >
                    23 days ago
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            false,
            <div
              className="card-stacked"
            >
              <div
                className="card-content"
              >
                <h1
                  className="post-card__title"
                >
                  <Link
                    as="/p/hello-world-UG9zdDox"
                    href="/post?id=hello-world-UG9zdDox"
                  >
                    <a
                      className="post-card__title--link"
                    >
                      Hello World
                    </a>
                  </Link>
                </h1>
                <p
                  className="post-card__text"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<div><p>Hey there im new</p>
</div>",
                    }
                  }
                />
              </div>
              <div
                className="post-card__meta card-action"
              >
                <div
                  className="post-card__meta__author"
                >
                  <div
                    className="post-card__meta__author-image"
                  >
                    <img
                      className="circle"
                      src="/static/default-pic.png"
                      style={Object {}}
                    />
                  </div>
                  <div
                    className="post-card__meta__info"
                  >
                    <Link
                      href="/profile/marvin_kome_VXNlcjoy"
                    >
                      <a
                        title="Marvin Kome"
                      >
                        <span
                          className="post-card__meta__name"
                        >
                          Marvin Kome
                        </span>
                      </a>
                    </Link>
                    <span
                      className="post-card__meta__date"
                    >
                      23 days ago
                    </span>
                  </div>
                </div>
              </div>
            </div>,
          ],
          "className": "post-card card horizontal",
        },
        "ref": null,
        "rendered": Array [
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="card-content"
                >
                  <h1
                    className="post-card__title"
                  >
                    <Link
                      as="/p/hello-world-UG9zdDox"
                      href="/post?id=hello-world-UG9zdDox"
                    >
                      <a
                        className="post-card__title--link"
                      >
                        Hello World
                      </a>
                    </Link>
                  </h1>
                  <p
                    className="post-card__text"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "<div><p>Hey there im new</p>
</div>",
                      }
                    }
                  />
                </div>,
                <div
                  className="post-card__meta card-action"
                >
                  <div
                    className="post-card__meta__author"
                  >
                    <div
                      className="post-card__meta__author-image"
                    >
                      <img
                        className="circle"
                        src="/static/default-pic.png"
                        style={Object {}}
                      />
                    </div>
                    <div
                      className="post-card__meta__info"
                    >
                      <Link
                        href="/profile/marvin_kome_VXNlcjoy"
                      >
                        <a
                          title="Marvin Kome"
                        >
                          <span
                            className="post-card__meta__name"
                          >
                            Marvin Kome
                          </span>
                        </a>
                      </Link>
                      <span
                        className="post-card__meta__date"
                      >
                        23 days ago
                      </span>
                    </div>
                  </div>
                </div>,
              ],
              "className": "card-stacked",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <h1
                      className="post-card__title"
                    >
                      <Link
                        as="/p/hello-world-UG9zdDox"
                        href="/post?id=hello-world-UG9zdDox"
                      >
                        <a
                          className="post-card__title--link"
                        >
                          Hello World
                        </a>
                      </Link>
                    </h1>,
                    <p
                      className="post-card__text"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<div><p>Hey there im new</p>
</div>",
                        }
                      }
                    />,
                  ],
                  "className": "card-content",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <Link
                        as="/p/hello-world-UG9zdDox"
                        href="/post?id=hello-world-UG9zdDox"
                      >
                        <a
                          className="post-card__title--link"
                        >
                          Hello World
                        </a>
                      </Link>,
                      "className": "post-card__title",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "as": "/p/hello-world-UG9zdDox",
                        "children": <a
                          className="post-card__title--link"
                        >
                          Hello World
                        </a>,
                        "href": "/post?id=hello-world-UG9zdDox",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "Hello World",
                          "className": "post-card__title--link",
                        },
                        "ref": null,
                        "rendered": "Hello World",
                        "type": "a",
                      },
                      "type": [Function],
                    },
                    "type": "h1",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "post-card__text",
                      "dangerouslySetInnerHTML": Object {
                        "__html": "<div><p>Hey there im new</p>
</div>",
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "p",
                  },
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <div
                    className="post-card__meta__author"
                  >
                    <div
                      className="post-card__meta__author-image"
                    >
                      <img
                        className="circle"
                        src="/static/default-pic.png"
                        style={Object {}}
                      />
                    </div>
                    <div
                      className="post-card__meta__info"
                    >
                      <Link
                        href="/profile/marvin_kome_VXNlcjoy"
                      >
                        <a
                          title="Marvin Kome"
                        >
                          <span
                            className="post-card__meta__name"
                          >
                            Marvin Kome
                          </span>
                        </a>
                      </Link>
                      <span
                        className="post-card__meta__date"
                      >
                        23 days ago
                      </span>
                    </div>
                  </div>,
                  "className": "post-card__meta card-action",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <div
                        className="post-card__meta__author-image"
                      >
                        <img
                          className="circle"
                          src="/static/default-pic.png"
                          style={Object {}}
                        />
                      </div>,
                      <div
                        className="post-card__meta__info"
                      >
                        <Link
                          href="/profile/marvin_kome_VXNlcjoy"
                        >
                          <a
                            title="Marvin Kome"
                          >
                            <span
                              className="post-card__meta__name"
                            >
                              Marvin Kome
                            </span>
                          </a>
                        </Link>
                        <span
                          className="post-card__meta__date"
                        >
                          23 days ago
                        </span>
                      </div>,
                    ],
                    "className": "post-card__meta__author",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <img
                          className="circle"
                          src="/static/default-pic.png"
                          style={Object {}}
                        />,
                        "className": "post-card__meta__author-image",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "className": "circle",
                          "src": "/static/default-pic.png",
                          "style": Object {},
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "img",
                      },
                      "type": "div",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          <Link
                            href="/profile/marvin_kome_VXNlcjoy"
                          >
                            <a
                              title="Marvin Kome"
                            >
                              <span
                                className="post-card__meta__name"
                              >
                                Marvin Kome
                              </span>
                            </a>
                          </Link>,
                          <span
                            className="post-card__meta__date"
                          >
                            23 days ago
                          </span>,
                        ],
                        "className": "post-card__meta__info",
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "class",
                          "props": Object {
                            "children": <a
                              title="Marvin Kome"
                            >
                              <span
                                className="post-card__meta__name"
                              >
                                Marvin Kome
                              </span>
                            </a>,
                            "href": "/profile/marvin_kome_VXNlcjoy",
                          },
                          "ref": null,
                          "rendered": Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": <span
                                className="post-card__meta__name"
                              >
                                Marvin Kome
                              </span>,
                              "title": "Marvin Kome",
                            },
                            "ref": null,
                            "rendered": Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": "Marvin Kome",
                                "className": "post-card__meta__name",
                              },
                              "ref": null,
                              "rendered": "Marvin Kome",
                              "type": "span",
                            },
                            "type": "a",
                          },
                          "type": [Function],
                        },
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "23 days ago",
                            "className": "post-card__meta__date",
                          },
                          "ref": null,
                          "rendered": "23 days ago",
                          "type": "span",
                        },
                      ],
                      "type": "div",
                    },
                  ],
                  "type": "div",
                },
                "type": "div",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`home tests renders view 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Body
    posts={
      Array [
        Object {
          "node": Object {
            "author": Object {
              "description": null,
              "fullName": "Marvin Kome",
              "gravatarUrl": null,
              "id": "VXNlcjoy",
            },
            "body": "<div><p>Hey there im new</p>
</div>",
            "claps": Object {
              "totalCount": 0,
            },
            "comments": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "author": Object {
                      "fullName": "Fake User",
                      "gravatarUrl": null,
                      "id": "VXNlcjox",
                    },
                    "body": "Hello World",
                    "id": "Q29tbWVudDox",
                    "replies": Object {
                      "edges": Array [],
                    },
                    "timestamp": "2018-06-05T01:30:59.729280",
                    "uuid": "1",
                  },
                },
                Object {
                  "node": Object {
                    "author": Object {
                      "fullName": "Fake User",
                      "gravatarUrl": null,
                      "id": "VXNlcjox",
                    },
                    "body": "Notify Marvin Correctly",
                    "id": "Q29tbWVudDoy",
                    "replies": Object {
                      "edges": Array [],
                    },
                    "timestamp": "2018-06-05T02:09:39.718090",
                    "uuid": "2",
                  },
                },
                Object {
                  "node": Object {
                    "author": Object {
                      "fullName": "Fake User",
                      "gravatarUrl": null,
                      "id": "VXNlcjox",
                    },
                    "body": "Hello Marvin",
                    "id": "Q29tbWVudDoz",
                    "replies": Object {
                      "edges": Array [],
                    },
                    "timestamp": "2018-06-05T11:58:49.746609",
                    "uuid": "3",
                  },
                },
                Object {
                  "node": Object {
                    "author": Object {
                      "fullName": "Fake User",
                      "gravatarUrl": null,
                      "id": "VXNlcjox",
                    },
                    "body": "Hello Marvin",
                    "id": "Q29tbWVudDo0",
                    "replies": Object {
                      "edges": Array [],
                    },
                    "timestamp": "2018-06-09T01:46:10.115571",
                    "uuid": "4",
                  },
                },
              ],
            },
            "id": "UG9zdDox",
            "postPicUrl": "",
            "tags": Object {
              "edges": Array [
                Object {
                  "node": Object {
                    "id": "VGFnczox",
                    "name": "hello",
                  },
                },
              ],
            },
            "timestamp": "2018-06-05T01:28:35.802157",
            "title": "Hello World",
            "uuid": "1",
            "views": 16,
          },
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="row"
      >
        <div
          className="col l6 m10 s12"
        >
          <PostCard
            post={
              Object {
                "author": Object {
                  "description": null,
                  "fullName": "Marvin Kome",
                  "gravatarUrl": null,
                  "id": "VXNlcjoy",
                },
                "body": "<div><p>Hey there im new</p>
</div>",
                "claps": Object {
                  "totalCount": 0,
                },
                "comments": Object {
                  "edges": Array [
                    Object {
                      "node": Object {
                        "author": Object {
                          "fullName": "Fake User",
                          "gravatarUrl": null,
                          "id": "VXNlcjox",
                        },
                        "body": "Hello World",
                        "id": "Q29tbWVudDox",
                        "replies": Object {
                          "edges": Array [],
                        },
                        "timestamp": "2018-06-05T01:30:59.729280",
                        "uuid": "1",
                      },
                    },
                    Object {
                      "node": Object {
                        "author": Object {
                          "fullName": "Fake User",
                          "gravatarUrl": null,
                          "id": "VXNlcjox",
                        },
                        "body": "Notify Marvin Correctly",
                        "id": "Q29tbWVudDoy",
                        "replies": Object {
                          "edges": Array [],
                        },
                        "timestamp": "2018-06-05T02:09:39.718090",
                        "uuid": "2",
                      },
                    },
                    Object {
                      "node": Object {
                        "author": Object {
                          "fullName": "Fake User",
                          "gravatarUrl": null,
                          "id": "VXNlcjox",
                        },
                        "body": "Hello Marvin",
                        "id": "Q29tbWVudDoz",
                        "replies": Object {
                          "edges": Array [],
                        },
                        "timestamp": "2018-06-05T11:58:49.746609",
                        "uuid": "3",
                      },
                    },
                    Object {
                      "node": Object {
                        "author": Object {
                          "fullName": "Fake User",
                          "gravatarUrl": null,
                          "id": "VXNlcjox",
                        },
                        "body": "Hello Marvin",
                        "id": "Q29tbWVudDo0",
                        "replies": Object {
                          "edges": Array [],
                        },
                        "timestamp": "2018-06-09T01:46:10.115571",
                        "uuid": "4",
                      },
                    },
                  ],
                },
                "id": "UG9zdDox",
                "postPicUrl": "",
                "tags": Object {
                  "edges": Array [
                    Object {
                      "node": Object {
                        "id": "VGFnczox",
                        "name": "hello",
                      },
                    },
                  ],
                },
                "timestamp": "2018-06-05T01:28:35.802157",
                "title": "Hello World",
                "uuid": "1",
                "views": 16,
              }
            }
          />
        </div>
      </div>,
      "className": "body section container",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="col l6 m10 s12"
          >
            <PostCard
              post={
                Object {
                  "author": Object {
                    "description": null,
                    "fullName": "Marvin Kome",
                    "gravatarUrl": null,
                    "id": "VXNlcjoy",
                  },
                  "body": "<div><p>Hey there im new</p>
</div>",
                  "claps": Object {
                    "totalCount": 0,
                  },
                  "comments": Object {
                    "edges": Array [
                      Object {
                        "node": Object {
                          "author": Object {
                            "fullName": "Fake User",
                            "gravatarUrl": null,
                            "id": "VXNlcjox",
                          },
                          "body": "Hello World",
                          "id": "Q29tbWVudDox",
                          "replies": Object {
                            "edges": Array [],
                          },
                          "timestamp": "2018-06-05T01:30:59.729280",
                          "uuid": "1",
                        },
                      },
                      Object {
                        "node": Object {
                          "author": Object {
                            "fullName": "Fake User",
                            "gravatarUrl": null,
                            "id": "VXNlcjox",
                          },
                          "body": "Notify Marvin Correctly",
                          "id": "Q29tbWVudDoy",
                          "replies": Object {
                            "edges": Array [],
                          },
                          "timestamp": "2018-06-05T02:09:39.718090",
                          "uuid": "2",
                        },
                      },
                      Object {
                        "node": Object {
                          "author": Object {
                            "fullName": "Fake User",
                            "gravatarUrl": null,
                            "id": "VXNlcjox",
                          },
                          "body": "Hello Marvin",
                          "id": "Q29tbWVudDoz",
                          "replies": Object {
                            "edges": Array [],
                          },
                          "timestamp": "2018-06-05T11:58:49.746609",
                          "uuid": "3",
                        },
                      },
                      Object {
                        "node": Object {
                          "author": Object {
                            "fullName": "Fake User",
                            "gravatarUrl": null,
                            "id": "VXNlcjox",
                          },
                          "body": "Hello Marvin",
                          "id": "Q29tbWVudDo0",
                          "replies": Object {
                            "edges": Array [],
                          },
                          "timestamp": "2018-06-09T01:46:10.115571",
                          "uuid": "4",
                        },
                      },
                    ],
                  },
                  "id": "UG9zdDox",
                  "postPicUrl": "",
                  "tags": Object {
                    "edges": Array [
                      Object {
                        "node": Object {
                          "id": "VGFnczox",
                          "name": "hello",
                        },
                      },
                    ],
                  },
                  "timestamp": "2018-06-05T01:28:35.802157",
                  "title": "Hello World",
                  "uuid": "1",
                  "views": 16,
                }
              }
            />
          </div>,
        ],
        "className": "row",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "UG9zdDox",
          "nodeType": "host",
          "props": Object {
            "children": <PostCard
              post={
                Object {
                  "author": Object {
                    "description": null,
                    "fullName": "Marvin Kome",
                    "gravatarUrl": null,
                    "id": "VXNlcjoy",
                  },
                  "body": "<div><p>Hey there im new</p>
</div>",
                  "claps": Object {
                    "totalCount": 0,
                  },
                  "comments": Object {
                    "edges": Array [
                      Object {
                        "node": Object {
                          "author": Object {
                            "fullName": "Fake User",
                            "gravatarUrl": null,
                            "id": "VXNlcjox",
                          },
                          "body": "Hello World",
                          "id": "Q29tbWVudDox",
                          "replies": Object {
                            "edges": Array [],
                          },
                          "timestamp": "2018-06-05T01:30:59.729280",
                          "uuid": "1",
                        },
                      },
                      Object {
                        "node": Object {
                          "author": Object {
                            "fullName": "Fake User",
                            "gravatarUrl": null,
                            "id": "VXNlcjox",
                          },
                          "body": "Notify Marvin Correctly",
                          "id": "Q29tbWVudDoy",
                          "replies": Object {
                            "edges": Array [],
                          },
                          "timestamp": "2018-06-05T02:09:39.718090",
                          "uuid": "2",
                        },
                      },
                      Object {
                        "node": Object {
                          "author": Object {
                            "fullName": "Fake User",
                            "gravatarUrl": null,
                            "id": "VXNlcjox",
                          },
                          "body": "Hello Marvin",
                          "id": "Q29tbWVudDoz",
                          "replies": Object {
                            "edges": Array [],
                          },
                          "timestamp": "2018-06-05T11:58:49.746609",
                          "uuid": "3",
                        },
                      },
                      Object {
                        "node": Object {
                          "author": Object {
                            "fullName": "Fake User",
                            "gravatarUrl": null,
                            "id": "VXNlcjox",
                          },
                          "body": "Hello Marvin",
                          "id": "Q29tbWVudDo0",
                          "replies": Object {
                            "edges": Array [],
                          },
                          "timestamp": "2018-06-09T01:46:10.115571",
                          "uuid": "4",
                        },
                      },
                    ],
                  },
                  "id": "UG9zdDox",
                  "postPicUrl": "",
                  "tags": Object {
                    "edges": Array [
                      Object {
                        "node": Object {
                          "id": "VGFnczox",
                          "name": "hello",
                        },
                      },
                    ],
                  },
                  "timestamp": "2018-06-05T01:28:35.802157",
                  "title": "Hello World",
                  "uuid": "1",
                  "views": 16,
                }
              }
            />,
            "className": "col l6 m10 s12",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "post": Object {
                "author": Object {
                  "description": null,
                  "fullName": "Marvin Kome",
                  "gravatarUrl": null,
                  "id": "VXNlcjoy",
                },
                "body": "<div><p>Hey there im new</p>
</div>",
                "claps": Object {
                  "totalCount": 0,
                },
                "comments": Object {
                  "edges": Array [
                    Object {
                      "node": Object {
                        "author": Object {
                          "fullName": "Fake User",
                          "gravatarUrl": null,
                          "id": "VXNlcjox",
                        },
                        "body": "Hello World",
                        "id": "Q29tbWVudDox",
                        "replies": Object {
                          "edges": Array [],
                        },
                        "timestamp": "2018-06-05T01:30:59.729280",
                        "uuid": "1",
                      },
                    },
                    Object {
                      "node": Object {
                        "author": Object {
                          "fullName": "Fake User",
                          "gravatarUrl": null,
                          "id": "VXNlcjox",
                        },
                        "body": "Notify Marvin Correctly",
                        "id": "Q29tbWVudDoy",
                        "replies": Object {
                          "edges": Array [],
                        },
                        "timestamp": "2018-06-05T02:09:39.718090",
                        "uuid": "2",
                      },
                    },
                    Object {
                      "node": Object {
                        "author": Object {
                          "fullName": "Fake User",
                          "gravatarUrl": null,
                          "id": "VXNlcjox",
                        },
                        "body": "Hello Marvin",
                        "id": "Q29tbWVudDoz",
                        "replies": Object {
                          "edges": Array [],
                        },
                        "timestamp": "2018-06-05T11:58:49.746609",
                        "uuid": "3",
                      },
                    },
                    Object {
                      "node": Object {
                        "author": Object {
                          "fullName": "Fake User",
                          "gravatarUrl": null,
                          "id": "VXNlcjox",
                        },
                        "body": "Hello Marvin",
                        "id": "Q29tbWVudDo0",
                        "replies": Object {
                          "edges": Array [],
                        },
                        "timestamp": "2018-06-09T01:46:10.115571",
                        "uuid": "4",
                      },
                    },
                  ],
                },
                "id": "UG9zdDox",
                "postPicUrl": "",
                "tags": Object {
                  "edges": Array [
                    Object {
                      "node": Object {
                        "id": "VGFnczox",
                        "name": "hello",
                      },
                    },
                  ],
                },
                "timestamp": "2018-06-05T01:28:35.802157",
                "title": "Hello World",
                "uuid": "1",
                "views": 16,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="row"
        >
          <div
            className="col l6 m10 s12"
          >
            <PostCard
              post={
                Object {
                  "author": Object {
                    "description": null,
                    "fullName": "Marvin Kome",
                    "gravatarUrl": null,
                    "id": "VXNlcjoy",
                  },
                  "body": "<div><p>Hey there im new</p>
</div>",
                  "claps": Object {
                    "totalCount": 0,
                  },
                  "comments": Object {
                    "edges": Array [
                      Object {
                        "node": Object {
                          "author": Object {
                            "fullName": "Fake User",
                            "gravatarUrl": null,
                            "id": "VXNlcjox",
                          },
                          "body": "Hello World",
                          "id": "Q29tbWVudDox",
                          "replies": Object {
                            "edges": Array [],
                          },
                          "timestamp": "2018-06-05T01:30:59.729280",
                          "uuid": "1",
                        },
                      },
                      Object {
                        "node": Object {
                          "author": Object {
                            "fullName": "Fake User",
                            "gravatarUrl": null,
                            "id": "VXNlcjox",
                          },
                          "body": "Notify Marvin Correctly",
                          "id": "Q29tbWVudDoy",
                          "replies": Object {
                            "edges": Array [],
                          },
                          "timestamp": "2018-06-05T02:09:39.718090",
                          "uuid": "2",
                        },
                      },
                      Object {
                        "node": Object {
                          "author": Object {
                            "fullName": "Fake User",
                            "gravatarUrl": null,
                            "id": "VXNlcjox",
                          },
                          "body": "Hello Marvin",
                          "id": "Q29tbWVudDoz",
                          "replies": Object {
                            "edges": Array [],
                          },
                          "timestamp": "2018-06-05T11:58:49.746609",
                          "uuid": "3",
                        },
                      },
                      Object {
                        "node": Object {
                          "author": Object {
                            "fullName": "Fake User",
                            "gravatarUrl": null,
                            "id": "VXNlcjox",
                          },
                          "body": "Hello Marvin",
                          "id": "Q29tbWVudDo0",
                          "replies": Object {
                            "edges": Array [],
                          },
                          "timestamp": "2018-06-09T01:46:10.115571",
                          "uuid": "4",
                        },
                      },
                    ],
                  },
                  "id": "UG9zdDox",
                  "postPicUrl": "",
                  "tags": Object {
                    "edges": Array [
                      Object {
                        "node": Object {
                          "id": "VGFnczox",
                          "name": "hello",
                        },
                      },
                    ],
                  },
                  "timestamp": "2018-06-05T01:28:35.802157",
                  "title": "Hello World",
                  "uuid": "1",
                  "views": 16,
                }
              }
            />
          </div>
        </div>,
        "className": "body section container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col l6 m10 s12"
            >
              <PostCard
                post={
                  Object {
                    "author": Object {
                      "description": null,
                      "fullName": "Marvin Kome",
                      "gravatarUrl": null,
                      "id": "VXNlcjoy",
                    },
                    "body": "<div><p>Hey there im new</p>
</div>",
                    "claps": Object {
                      "totalCount": 0,
                    },
                    "comments": Object {
                      "edges": Array [
                        Object {
                          "node": Object {
                            "author": Object {
                              "fullName": "Fake User",
                              "gravatarUrl": null,
                              "id": "VXNlcjox",
                            },
                            "body": "Hello World",
                            "id": "Q29tbWVudDox",
                            "replies": Object {
                              "edges": Array [],
                            },
                            "timestamp": "2018-06-05T01:30:59.729280",
                            "uuid": "1",
                          },
                        },
                        Object {
                          "node": Object {
                            "author": Object {
                              "fullName": "Fake User",
                              "gravatarUrl": null,
                              "id": "VXNlcjox",
                            },
                            "body": "Notify Marvin Correctly",
                            "id": "Q29tbWVudDoy",
                            "replies": Object {
                              "edges": Array [],
                            },
                            "timestamp": "2018-06-05T02:09:39.718090",
                            "uuid": "2",
                          },
                        },
                        Object {
                          "node": Object {
                            "author": Object {
                              "fullName": "Fake User",
                              "gravatarUrl": null,
                              "id": "VXNlcjox",
                            },
                            "body": "Hello Marvin",
                            "id": "Q29tbWVudDoz",
                            "replies": Object {
                              "edges": Array [],
                            },
                            "timestamp": "2018-06-05T11:58:49.746609",
                            "uuid": "3",
                          },
                        },
                        Object {
                          "node": Object {
                            "author": Object {
                              "fullName": "Fake User",
                              "gravatarUrl": null,
                              "id": "VXNlcjox",
                            },
                            "body": "Hello Marvin",
                            "id": "Q29tbWVudDo0",
                            "replies": Object {
                              "edges": Array [],
                            },
                            "timestamp": "2018-06-09T01:46:10.115571",
                            "uuid": "4",
                          },
                        },
                      ],
                    },
                    "id": "UG9zdDox",
                    "postPicUrl": "",
                    "tags": Object {
                      "edges": Array [
                        Object {
                          "node": Object {
                            "id": "VGFnczox",
                            "name": "hello",
                          },
                        },
                      ],
                    },
                    "timestamp": "2018-06-05T01:28:35.802157",
                    "title": "Hello World",
                    "uuid": "1",
                    "views": 16,
                  }
                }
              />
            </div>,
          ],
          "className": "row",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "UG9zdDox",
            "nodeType": "host",
            "props": Object {
              "children": <PostCard
                post={
                  Object {
                    "author": Object {
                      "description": null,
                      "fullName": "Marvin Kome",
                      "gravatarUrl": null,
                      "id": "VXNlcjoy",
                    },
                    "body": "<div><p>Hey there im new</p>
</div>",
                    "claps": Object {
                      "totalCount": 0,
                    },
                    "comments": Object {
                      "edges": Array [
                        Object {
                          "node": Object {
                            "author": Object {
                              "fullName": "Fake User",
                              "gravatarUrl": null,
                              "id": "VXNlcjox",
                            },
                            "body": "Hello World",
                            "id": "Q29tbWVudDox",
                            "replies": Object {
                              "edges": Array [],
                            },
                            "timestamp": "2018-06-05T01:30:59.729280",
                            "uuid": "1",
                          },
                        },
                        Object {
                          "node": Object {
                            "author": Object {
                              "fullName": "Fake User",
                              "gravatarUrl": null,
                              "id": "VXNlcjox",
                            },
                            "body": "Notify Marvin Correctly",
                            "id": "Q29tbWVudDoy",
                            "replies": Object {
                              "edges": Array [],
                            },
                            "timestamp": "2018-06-05T02:09:39.718090",
                            "uuid": "2",
                          },
                        },
                        Object {
                          "node": Object {
                            "author": Object {
                              "fullName": "Fake User",
                              "gravatarUrl": null,
                              "id": "VXNlcjox",
                            },
                            "body": "Hello Marvin",
                            "id": "Q29tbWVudDoz",
                            "replies": Object {
                              "edges": Array [],
                            },
                            "timestamp": "2018-06-05T11:58:49.746609",
                            "uuid": "3",
                          },
                        },
                        Object {
                          "node": Object {
                            "author": Object {
                              "fullName": "Fake User",
                              "gravatarUrl": null,
                              "id": "VXNlcjox",
                            },
                            "body": "Hello Marvin",
                            "id": "Q29tbWVudDo0",
                            "replies": Object {
                              "edges": Array [],
                            },
                            "timestamp": "2018-06-09T01:46:10.115571",
                            "uuid": "4",
                          },
                        },
                      ],
                    },
                    "id": "UG9zdDox",
                    "postPicUrl": "",
                    "tags": Object {
                      "edges": Array [
                        Object {
                          "node": Object {
                            "id": "VGFnczox",
                            "name": "hello",
                          },
                        },
                      ],
                    },
                    "timestamp": "2018-06-05T01:28:35.802157",
                    "title": "Hello World",
                    "uuid": "1",
                    "views": 16,
                  }
                }
              />,
              "className": "col l6 m10 s12",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "post": Object {
                  "author": Object {
                    "description": null,
                    "fullName": "Marvin Kome",
                    "gravatarUrl": null,
                    "id": "VXNlcjoy",
                  },
                  "body": "<div><p>Hey there im new</p>
</div>",
                  "claps": Object {
                    "totalCount": 0,
                  },
                  "comments": Object {
                    "edges": Array [
                      Object {
                        "node": Object {
                          "author": Object {
                            "fullName": "Fake User",
                            "gravatarUrl": null,
                            "id": "VXNlcjox",
                          },
                          "body": "Hello World",
                          "id": "Q29tbWVudDox",
                          "replies": Object {
                            "edges": Array [],
                          },
                          "timestamp": "2018-06-05T01:30:59.729280",
                          "uuid": "1",
                        },
                      },
                      Object {
                        "node": Object {
                          "author": Object {
                            "fullName": "Fake User",
                            "gravatarUrl": null,
                            "id": "VXNlcjox",
                          },
                          "body": "Notify Marvin Correctly",
                          "id": "Q29tbWVudDoy",
                          "replies": Object {
                            "edges": Array [],
                          },
                          "timestamp": "2018-06-05T02:09:39.718090",
                          "uuid": "2",
                        },
                      },
                      Object {
                        "node": Object {
                          "author": Object {
                            "fullName": "Fake User",
                            "gravatarUrl": null,
                            "id": "VXNlcjox",
                          },
                          "body": "Hello Marvin",
                          "id": "Q29tbWVudDoz",
                          "replies": Object {
                            "edges": Array [],
                          },
                          "timestamp": "2018-06-05T11:58:49.746609",
                          "uuid": "3",
                        },
                      },
                      Object {
                        "node": Object {
                          "author": Object {
                            "fullName": "Fake User",
                            "gravatarUrl": null,
                            "id": "VXNlcjox",
                          },
                          "body": "Hello Marvin",
                          "id": "Q29tbWVudDo0",
                          "replies": Object {
                            "edges": Array [],
                          },
                          "timestamp": "2018-06-09T01:46:10.115571",
                          "uuid": "4",
                        },
                      },
                    ],
                  },
                  "id": "UG9zdDox",
                  "postPicUrl": "",
                  "tags": Object {
                    "edges": Array [
                      Object {
                        "node": Object {
                          "id": "VGFnczox",
                          "name": "hello",
                        },
                      },
                    ],
                  },
                  "timestamp": "2018-06-05T01:28:35.802157",
                  "title": "Hello World",
                  "uuid": "1",
                  "views": 16,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
